--- a/src/Interface/views/index.ejs
+++ b/src/Interface/views/index.ejs
@@ -19,7 +19,7 @@
       </svg>
     </div>
     <div class="left kanan">
-      <input class="bot" title="Your bot name" value="Bot name" />
+      <!-- <input class="bot" title="Your bot name" value="Bot name" /> -->
       <button class="btn" title="Start the server">Start</button>
       <button class="btn" title="Restart the server">Restart</button>
       <button class="btn" title="Stop the server">Stop</button>
