--- a/src/Interface/views/components/splash.ejs
+++ b/src/Interface/views/components/splash.ejs
@@ -2,6 +2,6 @@
   <canvas id="gate"></canvas>
   
   <h1 id="thanks"></h1>
+  <p>@Mengkodingan ckptw</p>
   <button id="start" class="btn">Start building bots!</button>
-  <p>© Mengkodingan ckptw - <%= new Date().getFullYear(); %></p>
 </div>
