--- a/src/Interface/views/index.ejs
+++ b/src/Interface/views/index.ejs
@@ -12,7 +12,9 @@
   <%- include("./components/splash"); %>
 
   <%- include("./components/sidebar"); %>
-
+  
+  <%- include("./components/toolbar"); %>
+  
   <nav class="navbar">
     <div class="left kiri">
       <!-- <h1 class="text">CKPTW</h1> -->
